# src/app/core/openapi/lingua-poly/api/users.service.ts
@@ -18,6 +18,7 @@ import { CustomHttpParameterCodec }                          from '../encoder';
 import { Observable }                                        from 'rxjs';
 
 import { PasswordChange } from '../model/passwordChange';
+import { PasswordReset } from '../model/passwordReset';
 import { Profile } from '../model/profile';
 import { Token } from '../model/token';
 import { User } from '../model/user';
@@ -124,6 +125,48 @@ export class UsersService {
 
         return this.httpClient.patch<any>(`${this.configuration.basePath}/password`,
             passwordChange,
+            {
+                withCredentials: this.configuration.withCredentials,
+                headers: headers,
+                observe: observe,
+                reportProgress: reportProgress
+            }
+        );
+    }
+
+    /**
+     * Reset your password
+     * @param passwordReset 
+     * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
+     * @param reportProgress flag to report request and response progress.
+     */
+    public passwordResetPost(passwordReset?: PasswordReset, observe?: 'body', reportProgress?: boolean): Observable<any>;
+    public passwordResetPost(passwordReset?: PasswordReset, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<any>>;
+    public passwordResetPost(passwordReset?: PasswordReset, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<any>>;
+    public passwordResetPost(passwordReset?: PasswordReset, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+
+        let headers = this.defaultHeaders;
+
+        // to determine the Accept header
+        const httpHeaderAccepts: string[] = [
+        ];
+        const httpHeaderAcceptSelected: string | undefined = this.configuration.selectHeaderAccept(httpHeaderAccepts);
+        if (httpHeaderAcceptSelected !== undefined) {
+            headers = headers.set('Accept', httpHeaderAcceptSelected);
+        }
+
+
+        // to determine the Content-Type header
+        const consumes: string[] = [
+            'application/json'
+        ];
+        const httpContentTypeSelected: string | undefined = this.configuration.selectHeaderContentType(consumes);
+        if (httpContentTypeSelected !== undefined) {
+            headers = headers.set('Content-Type', httpContentTypeSelected);
+        }
+
+        return this.httpClient.post<any>(`${this.configuration.basePath}/password/reset`,
+            passwordReset,
             {
                 withCredentials: this.configuration.withCredentials,
                 headers: headers,
