# src/app/core/openapi/lingua-poly/model/models.ts
@@ -2,6 +2,7 @@ export * from './authorizationUrl';
 export * from './config';
 export * from './empty';
 export * from './passwordChange';
+export * from './passwordReset';
 export * from './profile';
 export * from './token';
 export * from './user';
